--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-
+THEME=https://raw.githubusercontent.com/Bluemoondragon07/Wikipedia-Theme/main/theme.css
+BASE_THEME=dark
 SITE_NAME_HEADER=Digital Garden
 SITE_BASE_URL=
 NOTE_ICON_DEFAULT=
