--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-THEME=https://raw.githubusercontent.com/JamesLemony/obsidian_vibrant/master/theme.css
+THEME=https://raw.githubusercontent.com/dlccyes/obsidian-nebula/HEAD/theme.css
 BASE_THEME=dark
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=MyNotes--
 SITE_BASE_URL=
 NOTE_ICON_DEFAULT=
 NOTE_ICON_TITLE=false
