--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
-dgShowFileTree=false
+dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
 dgLinkPreview=true
