--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=true
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=true
 dgLinkPreview=false
 dgShowTags=false
